--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "proj3-mod2",
   "version": "1.0.0",
   "description": "Projeto de crud do módulo 2 da blue",
-  "main": "index.js", "scripts": {
-  "start": "node index.js",
-  "dev": "nodemon index.js"
-},
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TainaVilela/proj3-mod2.git"
@@ -19,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "Router": "^2.1.0"
   }
 }
