--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Projeto de crud do módulo 2 da blue",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/TainaVilela/proj3-mod2#readme",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
