--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/TainaVilela/proj3-mod2#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "consign": "^0.1.6",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
