--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "Router": "^2.1.0"
   }
 }
